# agentsid

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  PRODUCT.md  README.md  action.yml
sdk-python/: README.md  pyproject.toml
sdk-python/agentsid/: __init__.py  client.py  errors.py  middleware.py
server/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 21eca51078a1_add_audit_integrity_hash_chain.py  35a9e5cf497f_add_encrypted_api_key_to_projects.py  644d5118e14f_add_advanced_permission_fields.py  6d8e2fe9c1cb_add_pending_approvals_and_webhooks.py  bfb68ce02aaf_initial_tables.py  c7e9f2b4a1d8_add_agent_type_and_parent.py
server/src/: app.py
server/src/api/: agents.py  approvals.py  audit.py  auth_dep.py  badge.py  claims.py  digest.py  permissions.py  projects.py  teams.py  validate.py  webhooks.py
server/src/config/: subagent_profiles.yaml
server/src/core/: config.py  database.py  security.py  validators.py
server/src/models/: models.py
server/src/services/: approval.py  audit.py  classifier.py  identity.py  notifications.py  permission.py  subagent_profiles.py  usage.py  webhook.py
server/static/: dashboard.html  docs.html  guides.html  privacy.html  terms.html
server/tests/: conftest.py  test_api_agents.py  test_api_audit.py  test_api_digest.py  test_api_permissions.py  test_api_projects.py  test_api_validate.py  test_classifier.py  test_conditions_path_pattern.py  test_security_regression.py  test_subagent_profiles.py  test_unit_security.py
(+147 files in other folders)
