[project]
name = "agentsid"
version = "0.1.0"
description = "Identity and auth for AI agents — drop-in MCP middleware"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.25.0"]
license = {text = "MIT"}
keywords = ["ai", "agents", "auth", "identity", "mcp", "security"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentsid"]
